--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <h1 class="title">Hello!</h1>
     </div>
+
 </body>
 
 </html>
