--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <h1 class="title">Hello!</h1>
     </div>
 
+    <div class="grid">
+        <div class="1"></div>
+        <div class="2"></div>
+        <div class="3"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 
 </html>
