--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
 
     <div class="grid">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="1">1</div>
+        <div class="2">2</div>
+        <div class="3">3</div>
+        <div class="4">4</div>
+        <div class="5">5</div>
+        <div class="6">6</div>
     </div>
 </body>
 
