--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <div class="5">5</div>
         <div class="6">6</div>
     </div>
+
+    <div class="flex">
+        <div class="7">7</div>
+        <div class="8">8</div>
+        <div class="9">9</div>
+        <div class="10">10</div>
+        <div class="11">11</div>
+        <div class="12">12</div>
+    </div>
+
 </body>
 
 </html>
