--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
 
     <div class="grid">
-        <div class="1">1</div>
-        <div class="2">2</div>
-        <div class="3">3</div>
-        <div class="4">4</div>
-        <div class="5">5</div>
-        <div class="6">6</div>
+        <div class="cell1">1</div>
+        <div class="cell2">2</div>
+        <div class="cell3">3</div>
+        <div class="cell4">4</div>
+        <div class="cell5">5</div>
+        <div class="cell6">6</div>
     </div>
 
     <div class="flex">
