--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </div>
 
     <div class="flex">
-        <div class="7">7</div>
-        <div class="8">8</div>
-        <div class="9">9</div>
-        <div class="10">10</div>
-        <div class="11">11</div>
-        <div class="12">12</div>
+        <div class="cell7">7</div>
+        <div class="cell8">8</div>
+        <div class="cell9">9</div>
+        <div class="cell10">10</div>
+        <div class="cell11">11</div>
+        <div class="cell12">12</div>
     </div>
 
 </body>
